Standard Core Implementations (#195)
Completes #65